# django-user

./: .gitignore  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  runtests.py  setup.cfg
example_project/example_project/: settings.py  urls.py
src/django_user/: admin.py  apps.py  auth.py  models.py  signals.py  urls.py
src/django_user/migrations/: 0001_initial.py  0002_add_login_throtling.py
tests/: test_auth.py  test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
