[metadata]
name = django-user
version = 0.1.0
description = Django app project template.
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-user
author = Genos Ltd
author_email = grazdorov@genos.hr
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    django >= 3.2
python_requires = >=3.6, <4

[options.packages.find]
where = src
